// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <SearchScreen/> debe de mostrar a batman y el input con el query string 1`] = `
<div>
  <h1>
    SearchScreen
  </h1>
  <hr />
  <div
    className="row"
  >
    <div>
      <h4>
        Search form
      </h4>
      <form
        onSubmit={[Function]}
      >
        <input
          autoComplete="off"
          className="form-control"
          name="searchTerm"
          onChange={[Function]}
          placeholder="Search"
          type="text"
          value="batman"
        />
        <button
          className="btn w-100 btn-outline-primary mt-1"
          type="submit"
        >
          Search
        </button>
      </form>
    </div>
    <div>
      <h4>
        Results
      </h4>
      <hr />
      <div
        className="row row-cols-2 row-cols-md-4 g-4"
      >
        <div
          className="col"
        >
          <div
            className="card"
          >
            <img
              alt="Batman"
              className="card-img"
              src="./assets/heroes/dc-batman.jpg"
            />
            <div
              className="card-body"
            >
              <h5
                className="card-title"
              >
                <b>
                   
                  Batman
                </b>
              </h5>
              <p
                className="card-text"
              >
                Bruce Wayne
              </p>
              <p
                className="card-text"
              >
                <small
                  className="text-muted"
                >
                  Detective Comics #27
                </small>
              </p>
              <a
                href="/heroe/dc-batman"
                onClick={[Function]}
              >
                 Mas...
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Pruebas en <SearchScreen/> debe de mostrarse correctamente con valores por defecto 1`] = `
<div>
  <h1>
    SearchScreen
  </h1>
  <hr />
  <div
    className="row"
  >
    <div>
      <h4>
        Search form
      </h4>
      <form
        onSubmit={[Function]}
      >
        <input
          autoComplete="off"
          className="form-control"
          name="searchTerm"
          onChange={[Function]}
          placeholder="Search"
          type="text"
          value=""
        />
        <button
          className="btn w-100 btn-outline-primary mt-1"
          type="submit"
        >
          Search
        </button>
      </form>
    </div>
    <div>
      <h4>
        Results
      </h4>
      <hr />
      <div
        className="row row-cols-2 row-cols-md-4 g-4"
      >
        <div
          className="alert alert-danger w-100 text-center"
          role="alert"
        >
          There is no a hero by the name of: 
        </div>
      </div>
    </div>
  </div>
</div>
`;
